<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--The tiles of the game-->
    <Button
        android:id="@+id/tileOne"
        android:layout_width="107dp"
        android:layout_height="107dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/btn_bg"
        android:text="@string/tileNumOne"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/tileTwo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/tileTwo"
        android:layout_width="107dp"
        android:layout_height="107dp"
        android:background="@drawable/btn_bg"
        android:text="@string/tileNumTwo"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/tileThree"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tileOne"
        app:layout_constraintTop_toTopOf="@+id/tileOne"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/tileThree"
        android:layout_width="107dp"
        android:layout_height="107dp"
        android:background="@drawable/btn_bg"
        android:text="@string/tileNumThree"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tileTwo"
        app:layout_constraintTop_toTopOf="@+id/tileTwo"
        tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/tileFour"
        android:layout_width="107dp"
        android:layout_height="107dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/btn_bg"
        android:text="@string/tileNumFour"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/tileFive"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tileOne"
        tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/tileFive"
        android:layout_width="107dp"
        android:layout_height="107dp"
        android:background="@drawable/btn_bg"
        android:text="@string/tileNumFive"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/tileSix"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tileFour"
        app:layout_constraintTop_toTopOf="@+id/tileFour"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/tileSix"
        android:layout_width="107dp"
        android:layout_height="107dp"
        android:background="@drawable/btn_bg"
        android:text="@string/tileNumSix"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tileFive"
        app:layout_constraintTop_toTopOf="@+id/tileFive"
        tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/tileSeven"
        android:layout_width="107dp"
        android:layout_height="107dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/btn_bg"
        android:text="@string/tileNumSeven"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/tileEight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tileFour"
        tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/tileEight"
        android:layout_width="107dp"
        android:layout_height="107dp"
        android:background="@drawable/btn_bg"
        android:text="@string/tileNumEight"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/tileNine"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tileSeven"
        app:layout_constraintTop_toTopOf="@+id/tileSeven"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/tileNine"
        android:layout_width="107dp"
        android:layout_height="107dp"
        android:background="@drawable/btn_bg"
        android:text="@string/tileNumNine"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tileEight"
        app:layout_constraintTop_toTopOf="@+id/tileEight"
        tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />

    <!--The Current Player TextView-->

    <TextView
        android:id="@+id/currentPlayer"
        android:layout_width="227dp"
        android:layout_height="32dp"
        android:text="@string/currentPlayerName"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tileEight"
        app:layout_constraintVertical_bias="0.083" />

    <!--New Game-->
    <Button
        android:id="@+id/newGame"
        android:layout_width="368dp"
        android:layout_height="53dp"
        android:text="@string/newGameText"
        android:background="@drawable/btn_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentPlayer"
        app:layout_constraintVertical_bias="0.062" />

</androidx.constraintlayout.widget.ConstraintLayout>